Ensure Aptivate link is readable

--- a/django/website/main/static/sass/main.scss
+++ b/django/website/main/static/sass/main.scss
@@ -60,3 +60,11 @@ footer {
 .footer_site > nav {
 	padding-right: 15px;
 }
+
+.navbar-text > a {
+    color: #bbdefb;
+}
+
+.navbar-text > a:hover {
+    color: #ffb74d;
+}
